Alterações no menu

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="style/main.css">
     <title>Clone Twitter</title>
 </head>
 <body>
-    
+    <aside class="aside-menu">
+        <div class="navigation">
+            <i class="fab fa-twitter icon-twitter"></i>
+            <ul class="navigation-list">
+                <li><i class="fas fa-home"></i>Página Inicial</li>
+                <li><i class="fas fa-hashtag"></i> Explorar</li>
+                <li><i class="far fa-bell"></i> Notificações</li>
+                <li><i class="far fa-envelope"></i> Mensagens</li>
+                <li><i class="far fa-bookmark"></i> Itens Salvos</li>
+                <li><i class="far fa-list-alt"></i> Listas</li>
+                <li><i class="fas fa-user"></i> Perfil</li>
+                <li><i class="fas fa-plus"></i> Mais</li>
+            </ul>
+
+            <a href="#" class="btn-tweetar">Tweetar</a>
+        </div>
+    </aside>
 </body>
 </html>
