--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="style/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Js/jQuery.min.3.5.1.js">
     <title>Clone Twitter</title>
 </head>
 <body>
@@ -12,17 +14,17 @@
         <div class="navigation">
             <i class="fab fa-twitter icon-twitter"></i>
             <ul class="navigation-list">
-                <li><i class="fas fa-home"></i>Página Inicial</li>
-                <li><i class="fas fa-hashtag"></i> Explorar</li>
-                <li><i class="far fa-bell"></i> Notificações</li>
-                <li><i class="far fa-envelope"></i> Mensagens</li>
-                <li><i class="far fa-bookmark"></i> Itens Salvos</li>
-                <li><i class="far fa-list-alt"></i> Listas</li>
-                <li><i class="fas fa-user"></i> Perfil</li>
-                <li><i class="fas fa-plus"></i> Mais</li>
+                <li><i class="fas fa-home"></i><span class="mobile-span">Página Inicial</span></li>
+                <li><i class="fas fa-hashtag"></i><span class="mobile-span"> Explorar</span></li>
+                <li><i class="far fa-bell"></i><span class="mobile-span"> Notificações</span></li>
+                <li><i class="far fa-envelope"></i><span class="mobile-span"> Mensagens</span></li>
+                <li><i class="far fa-bookmark"></i><span class="mobile-span"> Itens Salvos</span></li>
+                <li><i class="far fa-list-alt"></i><span class="mobile-span"> Listas</span></li>
+                <li><i class="fas fa-user"></i><span class="mobile-span"> Perfil</span></li>
+                <li><i class="fas fa-plus"></i><span class="mobile-span"> Mais</span></li>
             </ul>
 
-            <a href="#" class="btn-tweetar">Tweetar</a>
+            <a href="#" class="btn-tweetar"><span class="tela-pc">Tweetar</span><span class="tela-mobile"><i class="fas fa-feather-alt"></i></span></a>
         </div>
     </aside>
 </body>
