--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Js/jQuery.min.3.5.1.js">
+    <link rel="shortcut icon" href="image/twitter-logo-4.png">
     <title>Clone Twitter</title>
 </head>
 <body>
