--- a/index.html
+++ b/index.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="style/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Js/jQuery.min.3.5.1.js">
+    <link rel="stylesheet" href="Js/jQuery.min-3.5.1.js">
     <link rel="shortcut icon" href="image/twitter-logo-4.png">
     <title>Clone Twitter</title>
 </head>
 <body>
-    <aside class="aside-menu">
-        <div class="navigation">
-            <i class="fab fa-twitter icon-twitter"></i>
-            <ul class="navigation-list">
-                <li><i class="fas fa-home"></i><span class="mobile-span">Página Inicial</span></li>
-                <li><i class="fas fa-hashtag"></i><span class="mobile-span"> Explorar</span></li>
-                <li><i class="far fa-bell"></i><span class="mobile-span"> Notificações</span></li>
-                <li><i class="far fa-envelope"></i><span class="mobile-span"> Mensagens</span></li>
-                <li><i class="far fa-bookmark"></i><span class="mobile-span"> Itens Salvos</span></li>
-                <li><i class="far fa-list-alt"></i><span class="mobile-span"> Listas</span></li>
-                <li><i class="fas fa-user"></i><span class="mobile-span"> Perfil</span></li>
-                <li><i class="fas fa-plus"></i><span class="mobile-span"> Mais</span></li>
-            </ul>
-
-            <a href="#" class="btn-tweetar"><span class="tela-pc">Tweetar</span><span class="tela-mobile"><i class="fas fa-feather-alt"></i></span></a>
-        </div>
-    </aside>
+    <div id="principal-page">
+        <aside class="aside-menu">
+            <div class="navigation">
+                <i class="fab fa-twitter icon-twitter"></i>
+                <ul class="navigation-list">
+                    <li><i class="fas fa-home"></i><span class="mobile-span">Página Inicial</span></li>
+                    <li><i class="fas fa-hashtag"></i><span class="mobile-span"> Explorar</span></li>
+                    <li><i class="far fa-bell"></i><span class="mobile-span"> Notificações</span></li>
+                    <li><i class="far fa-envelope"></i><span class="mobile-span"> Mensagens</span></li>
+                    <li><i class="far fa-bookmark"></i><span class="mobile-span"> Itens Salvos</span></li>
+                    <li><i class="far fa-list-alt"></i><span class="mobile-span"> Listas</span></li>
+                    <li><i class="fas fa-user"></i><span class="mobile-span"> Perfil</span></li>
+                    <li><i class="fas fa-plus"></i><span class="mobile-span"> Mais</span></li>
+                </ul>
+    
+                <a href="#" class="btn-tweetar"><span class="tela-pc">Tweetar</span><span class="tela-mobile"><i class="fas fa-feather-alt"></i></span></a>
+            </div>
+        </aside>
+        <main class="main-container">
+            <h1>AQUI VAI FICAR O BRABÃO DE PEGAR NA PISTA</h1>
+        </main>
+        <aside class="aside-menu-right">
+            <div class="campo-busca">
+                <input type="text" class="input-pesquisa" placeholder="Buscar no Twitter">
+            </div>
+            <div class="noticias-diarias">
+                <div class="title">
+                    O que está acontecendo hoje?
+                </div>
+                <div class="noticia">
+                    <p>Mais comentados no Brasil</p>
+                    <h4>SOS Pantanal</h4>
+                    <p>Ajude o Pantanal!</p>
+                </div>
+                <div class="noticia">
+                    <p>Mais comentados no Brasil</p>
+                    <h4>SOS Pantanal</h4>
+                    <p>Ajude o Pantanal!</p>
+                </div>
+                <div class="noticia">
+                    <p>Mais comentados no Brasil</p>
+                    <h4>SOS Pantanal</h4>
+                    <p>Ajude o Pantanal!</p>
+                </div>
+                <div class="noticia">
+                    <h3>Veja Mais!</h3>
+                </div>
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
