Aplicado a main e finalizados alguns ajustes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,30 @@
             </div>
         </aside>
         <main class="main-container">
-            <h1>AQUI VAI FICAR O BRABÃO DE PEGAR NA PISTA</h1>
+            <div class="topo-main">
+                <h1>Página Inicial</h1>
+                <i class="fas fa-award"></i>
+            </div>
+            <div class="escrever-tweet">
+                <div class="foto-usuario">
+                    <img src="image/foto-usuario.png" class="foto-user">
+                </div>
+                <div class="tweetar">
+                    <input type="text" class="input-tweetar" placeholder="O que está acontecendo?">
+                    <p><i class="fas fa-globe-americas"></i>Todos podem responder</i></p>
+                    <div class="buttom-menu">
+                        <ul class="list-tweet">
+                            <li><i class="fas fa-image"></i></li>
+                            <li><i class="fas fa-image"></i></li>
+                            <li><i class="fas fa-chart-bar"></i></li>
+                            <li><i class="far fa-smile"></i></li>
+                            <li><i class="far fa-calendar-check"></i></li>
+                        </ul>
+
+                        <button class="btn-enviar">Tweetar</button>
+                    </div>
+                </div>
+            </div>
         </main>
         <aside class="aside-menu-right">
             <div class="campo-busca">
