Alteracoes na main e no codigo JS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="style/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Js/jQuery.min-3.5.1.js">
+    <script src="Js/jQuery.min-3.5.1.js"></script>
     <link rel="shortcut icon" href="image/twitter-logo-4.png">
     <title>Clone Twitter</title>
 </head>
@@ -49,8 +49,27 @@
                             <li><i class="far fa-smile"></i></li>
                             <li><i class="far fa-calendar-check"></i></li>
                         </ul>
-
                         <button class="btn-enviar">Tweetar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="div-tweet">
+                <div class="foto-usuario">
+                    <img src="image/foto-usuario.png" class="foto-tweet">
+                </div>
+                <div class="div-postagem">
+                    <div class="info-post">
+                        <p>Você tweetou</p>
+                        <p>@Você</p>
+                    </div>
+                    <div class="postagem">
+                        <p>Todos os comentários a baixo serão adicionados dinamicamente com Javascript 🚀</p>
+                    </div>
+                    <div class="select-post">
+                        <i class="far fa-comment"></i>
+                        <i class="fas fa-retweet"></i>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-upload"></i>
                     </div>
                 </div>
             </div>
@@ -84,5 +103,7 @@
             </div>
         </aside>
     </div>
+
+    <script type="text/Javascript" src="Js/script.js"></script>
 </body>
 </html>
