Aplicado o JS para criacao de conteudo dinamico

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                     <div class="postagem">
                         <p>Todos os comentários a baixo serão adicionados dinamicamente com Javascript 🚀</p>
                     </div>
-                    <div class="select-post">
+                    <!-- <div class="select-post">
                         <i class="far fa-comment"></i>
                         <i class="fas fa-retweet"></i>
                         <i class="far fa-heart"></i>
                         <i class="fas fa-upload"></i>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </main>
