--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                     </div> -->
                 </div>
             </div>
+            <div class="menu-bottom">
+                <ul class="menu-list-bottom">
+                    <li><i class="fas fa-home"></i></li>
+                    <li><i class="fas fa-hashtag"></i></li>
+                    <li><i class="far fa-bell"></i></li>
+                    <li><i class="far fa-envelope"></i></li>
+                </ul>
+            </div>
         </main>
         <aside class="aside-menu-right">
             <div class="campo-busca">
