Corrigdo alguns bugs. Projeto finalizado

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                     <li><i class="far fa-bell"></i></li>
                     <li><i class="far fa-envelope"></i></li>
                 </ul>
+
+                <a href="#" class="btn-tweetar"><span class="tela-pc">Tweetar</span><span class="tela-mobile"><i class="fas fa-feather-alt"></i></span></a>
             </div>
         </main>
         <aside class="aside-menu-right">
