Corrigido alguns bug e readme alterado

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             </div>
             <div class="div-tweet">
                 <div class="foto-usuario">
-                    <img src="image/foto-usuario.png" class="foto-tweet">
+                    <img src="image/foto-primeiro.png" class="foto-tweet">
                 </div>
                 <div class="div-postagem">
                     <div class="info-post">
-                        <p>Você tweetou</p>
-                        <p>@Você</p>
+                        <p>Javascript tweetou</p>
+                        <p>@JS💛</p>
                     </div>
                     <div class="postagem">
                         <p>Todos os comentários a baixo serão adicionados dinamicamente com Javascript 🚀</p>
